--- a/src/main/resources/lang/en-US.json
+++ b/src/main/resources/lang/en-US.json
@@ -4,7 +4,7 @@
   "new-claim": "New Claim",
   "data-folder-created": "Created data folder",
   "locating-jar": "Locating JAR file",
-  "dynmap-check": "Checking for Dynmap",
+  "mapping-check": "Checking for a mapping service!",
   "dynmap-warn-core": "Failed to validate Dynmap core, proceeding anyways...",
   "dynmap-hooked": "Hooked into Dynmap version $1",
   "dynmap-marker-name": "Claims",
