Give random marker index
apparently this buys enough time for the map to catch up and update.

+ Bad fix.

--- a/src/main/resources/lang/en-US.json
+++ b/src/main/resources/lang/en-US.json
@@ -7,7 +7,7 @@
   "mapping-check": "Checking for a mapping service!",
   "dynmap-warn-core": "Failed to validate Dynmap core, proceeding anyways...",
   "dynmap-hooked": "Hooked into Dynmap version $1",
-  "dynmap-marker-name": "Claims",
+  "mapping-marker-name": "Claims",
   "eco-fail": "No suitable economy plugin was found",
   "trust-load": "Loading trusted players",
   "trust-load-err": "An error occurred while loading trusted players. See details below.",
